<resources>
    <string name="app_name">ToDo List App</string>
    <string name="please_add_todo_list">Please Add To-Do List</string>
    <string name="label_todo_list">ToDo List</string>
    <string name="todo_icon" translatable="false">task_icon</string>
    <string name="delete_todo_button">delete_todo_button</string>
    <string name="error_validating_text">Invalid Input</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="title_todo">What do you want to do?</string>
    <string name="add_btn">Save</string>
    <string name="btn_update">Update</string>
    <string name="label_addTodo">Add Todo Fragment</string>
    <string name="label_editTodo">Edit Todo Fragment</string>
    <string name="todo_detail_id">id: %s</string>
    <string name="todo_detail_text">text: %s</string>
    <string name="format">%1$td/%1$tm/%1$tY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="label_detailTodo">Detail Todo Fragment</string>
    <string name="btn_edit">Edit</string>
    <string name="add_to_do">Add To Do</string>
    <string name="description">Description</string>
    <string name="empty_image">Empty Image</string>
    <string name="edit_to_do">Edit To Do</string>
    <string name="created">Created</string>
    <string name="due_date">Due Date</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="sort_by_created_date">Sort By Created Date</string>
    <string name="sort_by_due_date">Sort By Due Date</string>
    <string name="search_hint">Search</string>
</resources>
