<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todo_card"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/todo_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/todo_icon"
            android:src="@drawable/ic_calendar_check_outline_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/add"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            app:layout_constraintBottom_toBottomOf="@id/update"
            app:layout_constraintTop_toBottomOf="@id/todo_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/add_date_text_view"
                style="?attr/textAppearanceBody2"
                android:textSize="9sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textAlignment="textStart"
                android:text="@string/created" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addDate_text_view"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textAlignment="textStart"
                tools:text="Date View" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/todo_name_text_view"
            style="?attr/textAppearanceBody1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="8dp"
            android:layout_marginStart="16dp"
            android:textAlignment="textStart"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@id/todo_icon"
            app:layout_constraintStart_toEndOf="@+id/todo_icon"
            app:layout_constraintTop_toTopOf="@id/todo_icon"
            app:layout_constraintEnd_toStartOf="@id/due"
            tools:text="What do you want to do?" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/todo_description"
            style="?attr/textAppearanceCaption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:ellipsize="end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAlignment="gravity"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@id/update"
            app:layout_constraintEnd_toStartOf="@id/due"
            app:layout_constraintStart_toEndOf="@id/todo_icon"
            app:layout_constraintTop_toBottomOf="@id/todo_name_text_view"
            tools:text="@tools:sample/lorem/random" />

        <LinearLayout
            android:id="@+id/due"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="@id/update"
            app:layout_constraintTop_toTopOf="@id/todo_name_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/due_date_text_view"
                style="?attr/textAppearanceBody2"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textAlignment="textStart"
                android:text="@string/due_date" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dueDate_text_view"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:ellipsize="end"
                android:textAlignment="textStart"
                tools:text="Date View" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_description"
            app:layout_constraintStart_toStartOf="@id/todo_description"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/update_date_text_view"
                style="?attr/textAppearanceBody2"
                android:textSize="12sp"
                android:paddingStart="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:textAlignment="textStart"
                android:text="@string/update" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/updateDate_text_view"
                android:layout_marginStart="4dp"
                android:textColor="@color/lime"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:textAlignment="textStart"
                tools:text="Date View" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>